       show/hide system.
     - Added Gadget::isEnabled().
     - Added ListBox and ListBoxItem classes.
     - Added double click events (optional per gadget via a flag).
     - Added ProgressBar class.
     - Added EVENT_SHELVE and EVENT_UNSHELVE events.
     - Gadgets can become modal.
     - Added Jeff's application control code to Woopsi class.
     - Added CycleButton class.

  V0.31 (20080411)
  
  - Fixes:
     - Started inlining methods that can be inlined.
     - Made destructors protected to prevent creation of gadgets on the stack.
     - More const-correctness.
     - Gadget destructor deletes children using destroy() method instead of
       calling delete.
     - Textbox::resize() remembers correct value of visible flag.
     - Gadget::show() invalidates the rect cache correctly.
     - Refactored active/inactive/focused/blurred system:
        - Renamed Gadget "active" flag to "hasFocus".
        - Renamed Gadget "setActiveGadget" to "setFocusedGadget".
        - Renamed Gadget "_activeGadget" to "_focusedGadget".
        - Refactored Gadget "setActive()" into "focus()" and "blur()" methods.
     - Refactored visible/invisible system:
        - Renamed Gadget "visible" flag to "drawingEnabled".
        - Removed Gadget::setVisible().
        - Removed Gadget::isVisible().
        - Added Gadget::enableDrawing().
        - Added Gadget::disableDrawing().
        - Added Gadget::drawingEnabled().
        - Gadget::isDrawingEnabled() only returns true if the gadget is not hidden
          or deleted.
        - GraphicsPort drawing methods do not check Gadget::isDeleted() as it
          is checked in isDrawingEnabled().
     - MultiLineTextBox restores correct drawing state when resizing.
     - Fixed spelling of "closeable" to "closable".
     - Moved Gadget::_visibleRegionCacheInvalid bool into the flags struct.
     - Split PacMan demo into separate files for each class.
     - Fixed Font and MonoFont scanGlyph() max co-ord overflows.