@@ -5,5 +5,14 @@ int main(int argc, char* argv[]) {
 
 	// Create the demo application
 	Demo demo;
-	return demo.main(argc, argv);
+	demo.main(argc, argv);
+
+#if USING_SDL
+
+	// Shut down SDL systems
+	SDL_Quit();
+
+#endif
+
+	return 0;
 }
