@@ -2180,7 +2180,40 @@ void Gadget::goModal() {
 	// Steal focus
 	focus();
 
+#ifdef USING_SDL
+
+	// SDL main loop
+	SDL_Event event;
+	bool quit = false;
+
+	// Infinite loop to keep the program running
+	while (!quit && _flags.modal)
+	{
+		woopsiApplication->processOneVBL(this);
+
+		// Check for SDL quit
+		while (SDL_PollEvent(&event)) {
+            switch (event.type) {
+                case SDL_QUIT:
+                    quit = true;
+                    break;
+                case SDL_KEYDOWN:
+                    if (event.key.keysym.scancode == 53) {
+                        // Escape pressed
+                        quit = true;
+                    }
+                    break;
+            }
+		}
+	}
+
+#else
+
+	// Standard DS loop
 	while (_flags.modal) {
 		woopsiApplication->processOneVBL(this);
 	}
+
+#endif
+
 }
